# starmaker

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
starmaker/: __init__.py  __main__.py  audio.py  cli.py  comets.py  config.py  encoder.py  orchestrator.py  rare_sounds.py  renderer.py  utils.py  variable_warp.py
starmaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
starmaker/shaders/: composite.frag  nebula.frag  post.frag  quad.vert  starfield.frag
